<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="584dp"
        android:layout_marginBottom="10dp"
        android:layout_centerVertical="true"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivLogLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:layout_marginTop="18dp"
                android:layout_marginBottom="55dp"
                android:scaleType="fitCenter"
                android:src="@drawable/_logo_small" />


            <TextView
                android:id="@+id/textView"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans"
                android:text="Please EnterYour Credentials!"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/atvEmailLog"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_person"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:hint="@string/emailReg"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />


            <AutoCompleteTextView
                android:id="@+id/atvPasswordLog"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_password"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/passwordReg"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatCheckBox

                android:id="@+id/checkBox_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show Password">

            </androidx.appcompat.widget.AppCompatCheckBox>

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/forgot_password"
                android:textColor="@color/gray" />


            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btnsignin_gradient"
                android:onClick="sendNotification"
                android:text="@string/sign_inLog"
                android:textColor="#FFFFFF" />


            <ImageView
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="10dp"
                android:contentDescription="Social site button"
                android:src="@drawable/search" />


            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/signup_redirect"
                android:textColor="@color/gray" />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>